--- a/BuchLeaflet/code/3/index_963.html
+++ b/BuchLeaflet/code/3/index_963.html
@@ -9,19 +9,23 @@
 </head>
 <body>
 <button onclick="add()">
-Punkte hinzufügen
+Punkt hinzufügen
 </button>
 <br>
-<button onclick="newPoints()">
-Neue Punkte
+<button onclick="newPoint()">
+Daten neu setzen
 </button>
 <br>
 <button onclick="reset()">
 Reset
 </button>
+<br>
+<button onclick="setOptions()">
+Farben ändern
+</button>
 <div style="height: 700px;" id="mapid"></div>
 <script>
-var mymap = L.map('mapid').setView([50.27264, 7.26469], 10);
+var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 var points = [
 [50.1555, 7.591838, 0.2],
@@ -759,16 +763,20 @@ gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}
 }).addTo(mymap);
 function add()
 {
-heat.addLatLng([50.27264, 7.26469]);
+heat.addLatLng([50.1, 7.1, 0.2]);
 }
-function newPoints()
+function newPoint()
 {
-heat.setLatLngs([]);
-heat.addLatLng([50.27264, 7.26469]);
+heat.setLatLngs([[50.5, 7, 0.2]]);
 }
 function reset()
 {
 heat.setLatLngs(points);
+}
+function setOptions()
+{
+heat.setOptions({gradient: {0.4: 'black', 0.65: 'gray', 1: 'white'}
+});
 }
 </script>
 </body>
