--- a/BuchLeaflet/code/3/index_958.html
+++ b/BuchLeaflet/code/3/index_958.html
@@ -1379,11 +1379,14 @@ var points3 = [
 var heat = L.heatLayer(points).addTo(mymap);
 x=1;
 var name='';
-var interval = setInterval(function(){run()},1000);
+var interval = setInterval(function(){run()},2000);
 function run(){
 mymap.removeLayer(heat);
 name="points"+x.toString();
-heat = L.heatLayer(window[name],{blur:15,maxZoom:10,radius:25,gradient:{0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(mymap);
+heat = L.heatLayer(
+window[name],
+{blur:15,maxZoom:10,radius:25,gradient:{0.4: 'blue', 0.65: 'lime', 1: 'red'}})
+.addTo(mymap);
 if (x == 3)
 {
 x=1;
