--- a/BuchLeaflet/code/3/index_956.html
+++ b/BuchLeaflet/code/3/index_956.html
@@ -23,7 +23,7 @@ x > 200 ? '#fdbb84' :
 x > 100 ? '#fdd49e' :
 x > 0   ? '#fee8c8' :'#fff7ec';
 }
-function dcolor(x) {
+function densityColor(x) {
 return x > 500 ? '#990000' :
 x > 400 ? '#d7301f' :
 x > 300 ? '#ef6548' :
@@ -41,9 +41,9 @@ color: 'white',
 fillOpacity: 0.85
 };
 }
-function mydStyle(feature) {
+function myDensityStyle(feature) {
 return {
-fillColor: dcolor(feature.properties.destatis.population/feature.properties.destatis.area),
+fillColor: densityColor(feature.properties.destatis.population/feature.properties.destatis.area),
 weight: 1,
 opacity: 1,
 color: 'white',
@@ -55,7 +55,7 @@ var geoJsonLayer = L.geoJson(ct, {style: myStyle}).addTo(mymap);
 removeLayer(densitylayer);
 }
 function density(){
-var densitylayer=L.geoJson(ct, {style: mydStyle}).addTo(mymap);
+var densitylayer=L.geoJson(ct, {style: myDensityStyle}).addTo(mymap);
 removeLayer(geoJsonLayer);
 }
 </script>
